syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/bernie-pham/ecommercePlatform/pb";

message LoginMerchantRequest {
    string email = 1;
    string password = 2;
}

message LoginMerchantResponse {
    string access_token = 1;
    google.protobuf.Timestamp access_token_timeout = 2;
    string refresh_token = 3;
    google.protobuf.Timestamp refresh_token_timeout = 4;
}